--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
   background-color: #292524;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
+  padding: 40px;
+}
+
+.header {
+  margin-bottom: 40px;
 }
 
 h1 {
@@ -18,12 +23,16 @@ h1 {
 
 .fact-form {
   background-color: #44403c;
+  margin-bottom: 40px;
+  padding: 16px 40px;
 }
 
 .fact {
   font-size: 20px;
   line-height: 1.4;
   background-color: #44403c;
+  margin-bottom: 16px;
+  padding: 16px 24px;
 }
 
 .tag {
