--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
   background-color: #44403c;
   margin-bottom: 40px;
   padding: 16px 40px;
+  text-align: center;
 }
 
 .fact {
@@ -39,6 +40,9 @@ h1 {
   text-transform: uppercase;
   font-size: 14px;
   font-family: "Coiny", sans-serif;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 ul {
