--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body {
   padding: 40px;
 }
 
+main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
+}
+
+/* MAIN LAYOUT */
 .header {
   margin-bottom: 40px;
   display: flex;
@@ -18,6 +25,7 @@ body {
   justify-content: space-between;
 }
 
+/* ELEMENTS */
 .logo {
   display: flex;
   align-items: center;
