--- a/style.css
+++ b/style.css
@@ -86,3 +86,17 @@ h1 {
 ul {
   list-style: none;
 }
+
+.source:link,
+.source:visited {
+  color: #a8a29e;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+  margin-left: 12px;
+}
+
+.source:hover,
+.source:active {
+  color: #3b82f6;
+  text-decoration: underline;
+}
