--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ h1 {
   margin-top: 6px;
 }
 
+.category {
+  margin-bottom: 16px;
+}
+
 .fact-form {
   background-color: #44403c;
   margin-bottom: 40px;
@@ -91,12 +95,42 @@ ul {
 .source:visited {
   color: #a8a29e;
   text-decoration: none;
-  transition: 0.3s ease-in-out;
+  transition: 0.3s;
   margin-left: 12px;
 }
 
 .source:hover,
 .source:active {
   color: #3b82f6;
-  text-decoration: underline;
+}
+
+.btn {
+  border: none;
+  font-family: "Coiny", sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 17px;
+  padding: 16px 0 13px;
+  background-image: linear-gradient(135deg, #3b82f6, #16a34a, #ef4444, #eab308);
+  color: inherit;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  transform: scale(110%) rotate(-2deg);
+}
+
+.btn-large {
+  font-size: 30px;
+  padding: 20px 32px 17px;
+}
+
+.btn-all-categories {
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.btn-category {
+  width: 100%;
+  background-image: none;
 }
