--- a/style.css
+++ b/style.css
@@ -58,7 +58,35 @@ h1 {
   background-color: #44403c;
   margin-bottom: 40px;
   padding: 16px 40px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.fact-form input,
+.fact-form select {
+  width: 220px;
+  background-color: #78716c;
+  border: none;
+  border-radius: 100px;
+  padding: 16px;
+  font-size: 18px;
+  color: inherit;
+  font-family: inherit;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form span {
+  font-weight: 600;
+  font-size: 18px;
+  margin-right: 18px;
+}
+
+.fact-form input:first-child {
+  flex-grow: 1;
 }
 
 .fact {
