--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1 {
   display: flex;
   align-items: center;
   gap: 16px;
+  border-radius: 16px;
 }
 
 .fact-form input,
@@ -96,6 +97,7 @@ h1 {
   margin-bottom: 16px;
   padding: 16px 24px;
   letter-spacing: -1px;
+  border-radius: 16px;
 
   display: flex;
   align-items: center;
