--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   padding: 48px 64px;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .main {
   display: grid;
   grid-template-columns: 250px 1fr;
